# reimagined-jupiter

./: .dockerignore  .env.example  .env.example.complete  .gitignore  .merge-state  ADMIN_SECURITY.md  AIRDROP_IMPLEMENTATION_SUMMARY.md  AIRDROP_SECURITY.md  AIRDROP_SYSTEM.md  ARBITRAGE_ENGINE.md  ARCHITECTURE.md  AUTOMATION_SUMMARY.md  AUTONOMOUS_ORACLE.md  AUTONOMOUS_ORACLE_IMPLEMENTATION.md  BOT_FRAMEWORK_GUIDE.md  BOT_FRAMEWORK_SECURITY.md  BOT_FRAMEWORK_SUMMARY.md  CI_CD_FINAL_REPORT.md  CI_CD_IMPLEMENTATION.md  CI_CD_QUICK_REFERENCE.md  CI_CD_TROUBLESHOOTING.md  CODE_REVIEW_RECOMMENDATIONS.md  CODE_REVIEW_RESPONSES.md  COMPLETE_IMPLEMENTATION.md  CONSOLIDATED_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEV_BRANCH_GUIDE.md  DOCUMENTATION.md  Dockerfile  ENHANCED_SCANNER.md  FARCASTER_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FLASHLOAN_AGGREGATOR_SUMMARY.md  FLASH_LOAN_ENHANCEMENTS.md  FLASH_LOAN_OPTIMIZATION.md  GXQ_ECOSYSTEM_SUMMARY.md  (+73 more)
.cleanup-analysis/: README.md  execute-cleanup.js  intelligent-analyzer.js
.github/: CI_CD_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  SELF_OPTIMIZATION_GUIDE.md  SELF_OPTIMIZATION_IMPLEMENTATION.md  SELF_OPTIMIZE_INTEGRATION.md  SELF_OPTIMIZE_QUICK_REF.md  SELF_OPTIMIZE_README.md  SELF_OPTIMIZE_WORKFLOW.md  SYNC_DEPLOY_GUIDE.md  WORKFLOW_DIAGRAM.md  WORKFLOW_DOCUMENTATION.md  codecov.yml  codeql-config.yml  copilot-instructions.md  dependabot.yml  self-optimize-config.yml
api/: execute.ts  health.ts  monitor.ts  walletAnalysisEndpoints.ts
config/: environment.ts  rpc-endpoints.ts
db/: admin-database.ts  admin-security-schema.sql  adminDatabase.ts  bot-schema.sql  database.js  database.ts  init.js  schema.sql  test.js
deployment/: README.md
docs/: ADMIN_SECURITY.md  (+35 more)
(+424 files in other folders)
